fixed issue on mobile where intro text was breaking bcoz it was too large

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -183,7 +183,7 @@
 
 @media (max-width: 500px) {
   h1 {
-    font-size: 2rem!important;
+    font-size: 1.8rem!important;
   }
 
   h4 {
